--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,11 @@ select {
 
 .first-screen__header {
   width: 100%;
+}
+
+.header__body {
+  width: 1200px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
