--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,10 @@ select {
   font-family: "Proxima-nova";
   src: url(../fonts/proximaNova.otf);
 }
+body {
+  font-family: Proxima-nova;
+}
+
 .first-screen {
   text-transform: uppercase;
   background-image: url(../img/background.png);
@@ -122,6 +126,28 @@ select {
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+}
+
+.first-screen__main {
+  text-align: center;
+}
+
+.first-screen__title {
+  color: white;
+  letter-spacing: 36px;
+  font-size: 60px;
+  font-weight: 100;
+}
+
+.first-screen__subtitle {
+  color: #f84545;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.first-screen__button img {
+  max-width: 50%;
+  margin: 0 auto;
 }
 
 .first-screen__header {
@@ -135,7 +161,6 @@ select {
 }
 
 .header__nav a {
-  font-family: Proxima-nova;
   display: inline-block;
   font-size: 18px;
   text-decoration: none;
@@ -152,27 +177,4 @@ select {
 
 .header__logo img {
   max-width: 70%;
-}
-
-.first-screen__main {
-  text-align: center;
-}
-
-.first-screen__title {
-  color: white;
-  letter-spacing: 36px;
-  font-family: Proxima-nova;
-  font-size: 60px;
-  font-weight: 100;
-}
-
-.first-screen__subtitle {
-  color: #f84545;
-  font-weight: bold;
-  font-size: 30px;
-}
-
-.first-screen__button img {
-  max-width: 50%;
-  margin: 0 auto;
 }
