--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
   background-color: white;
 }
 
+/* Убираем ненужный фон при клике  */
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 /* шрифт */
 body {
   font-family: gilroy;
@@ -120,6 +125,7 @@ body {
   text-transform: uppercase;
   background-image: url(../img/background.png);
   background-size: cover;
+  background-position: center center;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -133,6 +139,7 @@ body {
 }
 
 .first-screen__title {
+  text-align: center;
   color: white;
   letter-spacing: 36px;
   font-size: 60px;
@@ -148,8 +155,117 @@ body {
 .first-screen__button img {
   max-width: 50%;
   margin: 0 auto;
+  transition: all 0.5s ease;
+  cursor: pointer;
 }
 
+.first-screen__button img:hover {
+  transform: scale(1.2);
+  filter: blur(2px);
+}
+
+@media (max-width: 724px) {
+  .first-screen__title {
+    letter-spacing: 16px;
+    font-size: 40px;
+  }
+  .first-screen__subtitle {
+    font-size: 24px;
+  }
+}
+@media (max-width: 425px) {
+  .first-screen__title {
+    letter-spacing: 10px;
+    font-size: 30px;
+  }
+  .first-screen__subtitle {
+    font-size: 20px;
+  }
+}
+@media (max-width: 320px) {
+  .first-screen__title {
+    font-size: 24px;
+    letter-spacing: 7px;
+  }
+  .first-screen__subtitle {
+    font-size: 18px;
+  }
+}
+.burger {
+  z-index: -1;
+  opacity: 0;
+  transition: all 0.3s ease;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  -webkit-backdrop-filter: blur(20px) saturate(20);
+          backdrop-filter: blur(20px) saturate(20);
+}
+
+.burger__body {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.burger__header {
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.burger__nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.burger__nav a {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  transition: all 0.3s ease;
+}
+
+.burger__nav a:hover {
+  color: #f84545;
+}
+
+.burger__logo img {
+  cursor: pointer;
+  max-width: 100%;
+  height: 60px;
+  transition: all 0.3s ease;
+}
+
+.burger__logo img:hover {
+  filter: drop-shadow(10px 10px 10px #f84545);
+  transform: scale(1.05);
+}
+
+.burger__button img {
+  cursor: pointer;
+  max-width: 100%;
+  height: 60px;
+}
+
+@media (max-width: 1200px) {
+  .burger__body {
+    width: 100vw;
+    padding: 10px;
+  }
+}
+@media (max-width: 320px) {
+  .burger__button img {
+    height: 40px;
+  }
+  .burger__logo img {
+    height: 40px;
+  }
+}
 .first-screen__header {
   width: 100%;
   margin: 20px;
@@ -160,11 +276,25 @@ body {
   gap: 20px;
 }
 
+.header__burger {
+  display: none;
+}
+
+.header__burger img {
+  height: 60px;
+  width: 100%;
+}
+
 .header__nav a {
   display: inline-block;
   font-size: 18px;
   text-decoration: none;
   color: white;
+  transition: all 0.3s ease;
+}
+
+.header__nav a:hover {
+  color: #f84545;
 }
 
 .header__body {
@@ -176,5 +306,34 @@ body {
 }
 
 .header__logo img {
-  max-width: 70%;
+  height: 60px;
+  transition: all 0.3s ease;
+}
+
+.header__logo img:hover {
+  filter: drop-shadow(10px 10px 10px #f84545);
+  transform: scale(1.05);
+}
+
+@media (max-width: 1200px) {
+  .header__body {
+    width: 100vw;
+    padding: 10px;
+  }
+}
+@media (max-width: 724px) {
+  .header__nav {
+    display: none;
+  }
+  .header__burger {
+    display: block;
+  }
+}
+@media (max-width: 320px) {
+  .header__burger img {
+    height: 40px;
+  }
+  .header__logo img {
+    height: 40px;
+  }
 }
