--- a/css/style.css
+++ b/css/style.css
@@ -344,10 +344,10 @@ body {
   gap: 20px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr 1fr 1.5fr;
-  height: 1200px;
 }
 
 .gourmet {
+  width: 100%;
   grid-row-start: span 2;
   grid-column-start: span 2;
   background-image: url(../img/gourmet-background.png);
@@ -361,6 +361,7 @@ body {
 }
 
 .brands__brand {
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -409,4 +410,13 @@ body {
   background-image: url(../img/nike-background.png);
   background-position: center center;
   background-size: cover;
+}
+
+@media (max-width: 1200px) {
+  .brands__body {
+    width: 100vw;
+    padding: 10px;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
