--- a/scss/_brands.scss
+++ b/scss/_brands.scss
@@ -7,12 +7,12 @@
     gap: 20px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr 1.5fr;
-    height: 1200px;
 }
 
 //------------------------------------------
 
 .gourmet {
+    width: 100%;
     grid-row-start: span 2;
     grid-column-start: span 2;
     background-image: url(../img/gourmet-background.png);
@@ -29,6 +29,7 @@
 //------------------------------------------
 
 .brands__brand {
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -94,3 +95,13 @@
 }
 
 //------------------------------------------
+
+@media (max-width: 1200px) {
+    .brands__body {
+        @include mobileWidth();
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+// @media (max-width: )
