--- a/css/style.css
+++ b/css/style.css
@@ -476,3 +476,21 @@ body {
     margin-top: 5px;
   }
 }
+.last-screen {
+  position: relative;
+}
+
+.last-screen__background {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(50px, 1fr));
+  position: absolute;
+  z-index: -1;
+}
+
+.last-screen__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
