--- a/scss/_last-screen.scss
+++ b/scss/_last-screen.scss
@@ -1,19 +1,88 @@
+//------------------------------------------
+
 .last-screen {
     position: relative;
+    margin-top: 20px;
 }
 
+//------------------------------------------
 
 .last-screen__background {
     display: grid;
     grid-template-columns: repeat(4, minmax(50px, 1fr));
-    position: absolute;
     z-index: -1;
+    width: 100vw;
 }
 
-.last-screen__body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+//------------------------------------------
+
+.last-screen__background img {
     width: 100%;
     height: 100%;
 }
+
+//------------------------------------------
+
+.last-screen__body {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+//------------------------------------------
+
+.last-screen__title {
+    color: white;
+    letter-spacing: 30px;
+    font-size: 60px;
+    font-weight: 100;
+}
+
+//------------------------------------------
+
+.last-screen__subtitle {
+    color: #f84545;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
+//------------------------------------------
+
+@media (max-width: 1200px) {
+    .last-screen__title {
+        font-size: 40px;
+        letter-spacing: 20px;
+    }
+}
+
+//------------------------------------------
+
+@media (max-width: 724px) {
+    .last-screen__title {
+        font-size: 35px;
+        letter-spacing: 15px;
+    }
+}
+
+//------------------------------------------
+
+@media (max-width: 450px) {
+    .last-screen__title {
+        font-size: 30px;
+        letter-spacing: 5px;
+    }
+
+    .last-screen__subtitle {
+        font-size: 20px;
+    }
+}
+
+//------------------------------------------
