--- a/css/style.css
+++ b/css/style.css
@@ -536,13 +536,21 @@ body {
     letter-spacing: 15px;
   }
 }
-@media (max-width: 450px) {
+@media (max-width: 425px) {
   .last-screen__title {
     font-size: 30px;
     letter-spacing: 5px;
   }
   .last-screen__subtitle {
     font-size: 20px;
+  }
+}
+@media (max-width: 320px) {
+  .last-screen__title {
+    font-size: 22px;
+  }
+  .last-screen__subtitle {
+    font-size: 16px;
   }
 }
 .footer__body {
@@ -561,6 +569,16 @@ body {
   transition: all 0.3s ease;
 }
 
+.footer__nav a::-moz-selection {
+  color: white;
+  background-color: black;
+}
+
+.footer__nav a::selection {
+  color: white;
+  background-color: black;
+}
+
 .footer__nav a:hover {
   color: #f84545;
 }
@@ -572,9 +590,43 @@ body {
 
 .footer__img {
   display: flex;
+  align-items: center;
   margin: 0 10px;
 }
 
 .footer__img img {
   max-width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .footer__body {
+    width: 100vw;
+    padding: 10px;
+    padding: 70px 10px;
+  }
+  .footer__nav a {
+    margin: 0 15px;
+  }
+}
+@media (max-width: 724px) {
+  .footer__body {
+    flex-direction: column;
+    padding: 10px;
+  }
+  .footer__nav {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+    justify-content: center;
+  }
+  .footer__social {
+    margin: 10px;
+    justify-content: center;
+  }
+}
+@media (max-width: 320px) {
+  .footer__nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
