--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,9 +1,13 @@
+//------------------------------------------
+
 .footer__body {
     @include bodyWidth();
     display: flex;
     justify-content: space-between;
     padding: 70px 0;
 }
+
+//------------------------------------------
 
 .footer__nav a {
     margin: 0 20px;
@@ -13,21 +17,81 @@
     transition: all 0.3s ease;
 }
 
+//------------------------------------------
+
+.footer__nav a::selection {
+    color: white;
+    background-color: black;
+}
+
+//------------------------------------------
+
 .footer__nav a:hover {
     color: #f84545;
 }
+
+//------------------------------------------
 
 .footer__social {
     display: flex;
     justify-content: space-between;
 }
 
+//------------------------------------------
+
 .footer__img {
     display: flex;
+    align-items: center;
     margin: 0 10px;
 }
 
+//------------------------------------------
+
 .footer__img img {
     max-width: 100%;
-
 }
+
+//------------------------------------------
+
+@media (max-width: 1200px) {
+    .footer__body {
+        @include mobileWidth;
+        padding: 70px 10px;
+    }
+
+    .footer__nav a {
+        margin: 0 15px;
+    }
+}
+
+//------------------------------------------
+
+@media (max-width: 724px) {
+    .footer__body {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .footer__nav {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        text-align: center;
+        justify-content: center;
+    }
+
+    .footer__social {
+        margin: 10px;
+        justify-content: center;
+    }
+}
+
+//------------------------------------------
+
+@media (max-width: 320px) {
+    .footer__nav {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+//------------------------------------------
