--- a/scss/_last-screen.scss
+++ b/scss/_last-screen.scss
@@ -74,7 +74,7 @@
 
 //------------------------------------------
 
-@media (max-width: 450px) {
+@media (max-width: 425px) {
     .last-screen__title {
         font-size: 30px;
         letter-spacing: 5px;
@@ -84,5 +84,18 @@
         font-size: 20px;
     }
 }
+
+//------------------------------------------
+
+@media (max-width: 320px) {
+    .last-screen__title {
+        font-size: 22px;
+    }
+
+    .last-screen__subtitle {
+        font-size: 16px;
+    }
+}
+
 
 //------------------------------------------
