--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @charset "UTF-8";
+
 /* меняем цвет виделения */
 *::-moz-selection {
   color: black;
   background-color: white;
 }
+
 *::selection {
   color: black;
   background-color: white;
@@ -36,6 +38,7 @@ body {
 *,
 *::before,
 *::after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -80,7 +83,7 @@ ol[class] {
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
   -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 /* Упрощаем работу с изображениями */
@@ -90,7 +93,7 @@ img {
 }
 
 /* Указываем понятную периодичность в потоке данных у article*/
-article > * + * {
+article>*+* {
   margin-top: 1em;
 }
 
@@ -106,17 +109,21 @@ select {
 @media (prefers-reduced-motion: reduce) {
   * {
     -webkit-animation-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
+    animation-duration: 0.01ms !important;
     -webkit-animation-iteration-count: 1 !important;
-            animation-iteration-count: 1 !important;
+    animation-iteration-count: 1 !important;
+    -webkit-transition-duration: 0.01ms !important;
+    -o-transition-duration: 0.01ms !important;
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
 }
+
 @font-face {
   font-family: "Proxima-nova";
   src: url(../fonts/proximaNova.otf);
 }
+
 body {
   font-family: Proxima-nova;
 }
@@ -128,9 +135,18 @@ body {
   background-position: center center;
   width: 100vw;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -155,11 +171,15 @@ body {
 .first-screen__button img {
   max-width: 50%;
   margin: 0 auto;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   cursor: pointer;
 }
 
 .first-screen__button img:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
   transform: scale(1.1);
 }
 
@@ -168,38 +188,46 @@ body {
     letter-spacing: 16px;
     font-size: 40px;
   }
+
   .first-screen__subtitle {
     font-size: 24px;
   }
 }
+
 @media (max-width: 425px) {
   .first-screen__title {
     letter-spacing: 10px;
     font-size: 30px;
   }
+
   .first-screen__subtitle {
     font-size: 20px;
   }
 }
+
 @media (max-width: 320px) {
   .first-screen__title {
     font-size: 24px;
     letter-spacing: 7px;
   }
+
   .first-screen__subtitle {
     font-size: 18px;
   }
 }
+
 .burger {
   z-index: -1;
   opacity: 0;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
   position: fixed;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
   -webkit-backdrop-filter: blur(20px) saturate(20);
-          backdrop-filter: blur(20px) saturate(20);
+  backdrop-filter: blur(20px) saturate(20);
 }
 
 .burger__body {
@@ -209,13 +237,24 @@ body {
 
 .burger__header {
   padding: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .burger__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -226,6 +265,8 @@ body {
   color: white;
   text-decoration: none;
   font-size: 20px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
@@ -237,11 +278,16 @@ body {
   cursor: pointer;
   max-width: 100%;
   height: 60px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
 .burger__logo img:hover {
+  -webkit-filter: drop-shadow(10px 10px 10px #f84545);
   filter: drop-shadow(10px 10px 10px #f84545);
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
 
@@ -257,20 +303,25 @@ body {
     padding: 10px;
   }
 }
+
 @media (max-width: 320px) {
   .burger__button img {
     height: 40px;
   }
+
   .burger__logo img {
     height: 40px;
   }
 }
+
 .first-screen__header {
   width: 100%;
   margin: 20px;
 }
 
 .header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 20px;
 }
@@ -289,6 +340,8 @@ body {
   font-size: 18px;
   text-decoration: none;
   color: white;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
@@ -299,18 +352,29 @@ body {
 .header__body {
   width: 1200px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 .header__logo img {
   height: 60px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
 .header__logo img:hover {
+  -webkit-filter: drop-shadow(0px 0px 20px #f84545);
   filter: drop-shadow(0px 0px 20px #f84545);
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
 
@@ -320,22 +384,27 @@ body {
     padding: 10px;
   }
 }
+
 @media (max-width: 724px) {
   .header__nav {
     display: none;
   }
+
   .header__burger {
     display: block;
   }
 }
+
 @media (max-width: 320px) {
   .header__burger img {
     height: 40px;
   }
+
   .header__logo img {
     height: 40px;
   }
 }
+
 .brands__body {
   width: 1200px;
   margin: 0 auto;
@@ -355,6 +424,7 @@ body {
   background-size: cover;
   padding: 30px 50px;
 }
+
 .gourmet .brands__name {
   font-size: 50px;
   vertical-align: bottom;
@@ -362,8 +432,15 @@ body {
 
 .brands__brand {
   max-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: end;
   text-transform: uppercase;
   padding: 20px 20px;
@@ -420,66 +497,93 @@ body {
     width: 100%;
     gap: 10px;
   }
+
   .brands__brand {
     padding: 10px;
     padding-top: 100px;
   }
+
   .brands__name {
     font-size: 15px;
   }
 }
+
 @media (max-width: 724px) {
   .brands__body {
     grid-template-columns: repeat(2, minmax(100px, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
   }
+
   .brands__brand {
     padding: 10px;
     padding-top: 50px;
   }
+
   .gourmet .brands__name {
     font-size: 20px;
   }
+
   .brands__name {
     font-size: 15px;
     letter-spacing: 5px;
   }
+
   .brands__logo {
     width: 40%;
   }
+
   .palace {
+    -webkit-box-ordinal-group: 4;
+    -ms-flex-order: 3;
     order: 3;
     grid-row-start: span 2;
   }
+
   .adidas {
+    -webkit-box-ordinal-group: 6;
+    -ms-flex-order: 5;
     order: 5;
   }
+
   .adidas .brands__logo {
     width: 20%;
   }
+
   .adidas .brands__name {
     margin: 0;
     margin-top: 5px;
   }
+
   .nike {
+    -webkit-box-ordinal-group: 5;
+    -ms-flex-order: 4;
     order: 4;
     grid-row-start: span 2;
   }
+
   .deep {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
     order: 2;
     grid-row-start: span 2;
   }
+
   .carhartt {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
     order: 1;
   }
+
   .carhartt .brands__logo {
     width: 20%;
   }
+
   .carhartt .brands__name {
     margin: 0;
     margin-top: 5px;
   }
 }
+
 .last-screen {
   position: relative;
   margin-top: 20px;
@@ -503,8 +607,15 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.8);
@@ -530,33 +641,43 @@ body {
     letter-spacing: 20px;
   }
 }
+
 @media (max-width: 724px) {
   .last-screen__title {
     font-size: 35px;
     letter-spacing: 15px;
   }
 }
+
 @media (max-width: 425px) {
   .last-screen__title {
     font-size: 30px;
     letter-spacing: 5px;
   }
+
   .last-screen__subtitle {
     font-size: 20px;
   }
 }
+
 @media (max-width: 320px) {
   .last-screen__title {
     font-size: 22px;
   }
+
   .last-screen__subtitle {
     font-size: 16px;
   }
 }
+
 .footer__body {
   width: 1200px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 70px 0;
 }
@@ -566,6 +687,8 @@ body {
   font-weight: bold;
   text-decoration: none;
   color: black;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
@@ -584,12 +707,20 @@ body {
 }
 
 .footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .footer__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin: 0 10px;
 }
@@ -604,26 +735,38 @@ body {
     padding: 10px;
     padding: 70px 10px;
   }
+
   .footer__nav a {
     margin: 0 15px;
   }
 }
+
 @media (max-width: 724px) {
   .footer__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding: 10px;
   }
+
   .footer__nav {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
+
   .footer__social {
     margin: 10px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
 }
+
 @media (max-width: 320px) {
   .footer__nav {
     display: grid;
